Understand how tailwind integrates with react

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <!-- Add the Play CDN script to your HTML
 Add the Play CDN script tag to the <head> of your HTML file, and start using Tailwind’s utility classes to style your content. -->
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <!-- Try customizing your config
 Edit the tailwind.config object to customize your configuration with your own design tokens. -->
     <script>
@@ -37,7 +38,7 @@ Use type="text/tailwindcss" to add custom CSS that supports all of Tailwind's CS
         }
       }
     </style>
-    <title>ReactJS Portfolio</title>
+    <title>Mosaic Lite</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
